Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-36904

'cbepctl stop' command hangs when waiting to confirm Flusher is stopped on cluster with 0 mutations

    XMLWordPrintable

Details

    • Untriaged
    • Centos 64-bit
    • Yes
    • KV Sprint 2019-12

    Description

      Summary

      cbepctl stop hangs waiting for confirmation from KV-Engine that the Flusher has been stopped, if there are no mutations occurring on the primary shard (shard 0). Note the Flusher has been stopped, the command-line tool just cannot detect this.

      Steps to Reproduce

      1. Run epctl against a cluster with the flusher running (e.g. a freshly stated node), and with no mutations in flight:

        $ /opt/couchbase/bin/cbepctl 10.112.190.101:11210  -u cbadminbucket -p password -b default stop
        

      2. Observe that the command doesn't return.

      Expected Results
      The command should return, confirming persistence has been stopped:

      $ /opt/couchbase/bin/cbepctl 10.112.190.101:11210  -u cbadminbucket -p password -b default stop
      Persistence stopped
      $
      

      Actual Results
      The command hangs. Ctrl-C'ing and retrying gives an error (EINVAL) as the flusher actually /has/ already been stopped.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Balakumaran.Gopal Balakumaran Gopal
              Balakumaran.Gopal Balakumaran Gopal
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty